<resources>
    <string name="app_name">OnSpot</string>
    <string name="option_logout">Logout</string>
    <string name="modify_profile">Modify profile</string>
    <string name="info">Info&amp;Credits</string>
    <string name="image">Image</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in"> Sign in</string>
    <string name="action_sign_up"> Sign up with mail</string>
    <string name="action_facebook"> Connect with Facebook</string>
    <string name="action_guest"> Browse as a guest</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="create_user_failed">Creation user failed</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings for MapsActivity -->
    <string name="title_activity_maps">Map</string>
    <string name="toolbar1">Search</string>
    <string name="toolbar2">List</string>
    <string name="toolbar3">Add Spot</string>
    <string name="toolbar5">Profile</string>
    <string name="toolbar4">Liked</string>

    <!-- Strings for ProfileActivity -->
    <string name="title_activity_profile">Join us</string>
    <string name="avatarprofile">AvatarProfile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="join">Join</string>

    <!-- Strings for PermissionUtilities -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!-- String for Add Spot Fragment -->
    <string name="add_spot">Add Spot</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="save">Save</string>
    <string name="title">Title</string>

    <!-- String for Search Fragment -->
    <string name="search_button">Search</string>
    <string name="search_hint">Search Location Here</string>

    <!-- String for Spot Fragment -->
    <string name="spot">Spot</string>

    <!-- String for List Spots Fragment -->
    <string name="visible_spot">Visible Spots</string>

    <!-- String for MyProfileActivity -->
    <string name="heading_liked">Favourites</string>
    <string name="heading_my_images">My Spots</string>
    <string name="age">Age: </string>

    <!-- String for InfoActivity -->
    <string name="credits">Credits</string>
    <string name="MapsIconCollection">  Maps Icons Collection</string>
    <string name="about_onSpot">On Spot is app that allows users to submit and view
        sightings in an easy interface with GEO coordinates, picture, video and further information. \n
        OnSpot creates a community of people sharing experiences like food, nightlife, shows,
        outdoor activities, travel tips and more. \n \n
        How OnSpot Works:\n
        &#8226; Select Your Interests –- Easily and quickly choose from N interest categories to find the best experiences possible for you. \n
        &#8226; Explore What People Recommend –- Scroll through a feed of amazing new experiences or explore your city on a map. \n
        &#8226; Recommend An Experience – Share what you want by posting a video, photo or audio along with a short description. \n
    </string>


    <!-- Facebook App ID -->
    <string name="facebook_app_id">690703731088483</string>


</resources>
