<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="it.unipi.iet.onspot.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:id="@+id/textView"
        android:layout_marginTop="125dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo1"/>

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:gravity="bottom">

        <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:id="@+id/button"
        android:drawableStart="@drawable/login"
        android:background="@color/colorPrimaryLight"
        android:layout_marginTop="121dp"
        android:layout_alignStart="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:paddingStart="80dp"
        android:paddingEnd="80dp"
        android:textAlignment="textStart"/>

        <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_up"
        android:drawableStart="@drawable/email"
        android:background="@color/colorPrimary"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_alignStart="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        android:paddingStart="80dp"
        android:paddingEnd="80dp"
        android:textAlignment="textStart"/>

        <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_facebook"
        android:drawableStart="@drawable/facebook"
        android:background="#3b5998"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:paddingStart="80dp"
        android:paddingEnd="10dp"
        android:textAlignment="textStart" />

        <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/action_guest"
        android:id="@+id/button4"
        android:drawableStart="@drawable/guest"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        android:paddingStart="80dp"
        android:paddingEnd="80dp"
        android:textAlignment="textStart"/>


    </RelativeLayout>
</RelativeLayout>
