<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#E9E9E9"
    android:theme="@style/AppTheme"
    tools:context=".MapsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spot"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-medium"
        android:textSize="18sp"
        android:padding="10dp"
        android:id="@+id/spot" />

    <ImageView
        android:layout_height="150dp"
        android:layout_width="150dp"
        android:contentDescription="@string/image"
        android:scaleType="fitXY"
        android:id="@+id/content"
        android:layout_below="@+id/spot"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/clock"
        android:id="@+id/date"
        android:padding="4dp"
        android:layout_alignTop="@+id/content"
        android:layout_toEndOf="@+id/content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/content"
        android:drawableStart="@drawable/folder"
        android:layout_below="@id/date"
        android:id="@+id/category"
        android:padding="4dp"
        android:text="@string/category"
        android:layout_alignStart="@id/date"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/content"
        android:drawableStart="@drawable/quote"
        android:id="@+id/description"
        android:padding="4dp"
        android:text="@string/description"
        android:layout_alignStart="@id/date"
        android:layout_below="@+id/category" />

    <ImageView
        android:layout_height="50dp"
        android:layout_width="50dp"
        android:contentDescription="@string/image"
        android:padding="8dp"
        android:scaleType="fitXY"
        android:id="@+id/user_photo"
        android:layout_below="@+id/content"
        android:layout_alignStart="@+id/content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/user_photo"
        android:layout_alignTop="@id/user_photo"
        android:id="@+id/user_name"
        android:paddingTop="16dp"
        />



</RelativeLayout>