<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context="it.unipi.iet.onspot.InfoActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"><RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/info"
        android:layout_margin="5dp"
        android:elevation="3dp"
        card_view:cardCornerRadius="12dp"
        >

        <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="About On Spot"
                android:id="@+id/about"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp"
                android:paddingBottom="30dp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_onSpot"
                android:layout_below="@id/about"
                android:id="@+id/description"/>

            <TextView
                android:drawableStart="@drawable/copyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" Erica Faroni - Giulia Di Bella 2016"
                android:paddingStart="30dp"
                android:gravity="center_vertical"
                android:layout_below="@id/description"
                android:paddingTop="20dp"
                android:layout_centerInParent="true"
                android:id="@+id/copyright"/>


        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:elevation="3dp"
        card_view:cardCornerRadius="12dp"
        >

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/credits"
                android:text="@string/credits"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp"
                android:paddingTop="10dp"
                android:paddingBottom="30dp"
                />


            <TextView
                android:drawableStart="@drawable/miclogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/MapsIconCollection"
                android:layout_below="@id/credits"/>


        </RelativeLayout>

    </android.support.v7.widget.CardView>
    </RelativeLayout>
    </ScrollView>

</RelativeLayout>
